// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ConfigTestCases css css-loader exported tests should work 1`] = `
Object {
  "default": "classes_module_css-default",
  "module": "classes_module_css-module",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 2`] = `
Object {
  "class": "composes-multiple_module_css-class composes-multiple_module_css-other-class composes-multiple_module_css-class-1 composes-multiple_module_css-class-2 alias_css-imported-alias alias-1_css-imported-alias-2 alias-1_css-imported-alias-3 global-class global-class-1 global-class-2",
  "class-1": "composes-multiple_module_css-class-1",
  "class-2": "composes-multiple_module_css-class-2",
  "class-other": "composes-multiple_module_css-class-other composes-multiple_module_css-other-class composes-multiple_module_css-class-1",
  "other-class": "composes-multiple_module_css-other-class",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 3`] = `
Object {
  "otherClassName": "composes-global_module_css-otherClassName global-class other-global-class",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 4`] = `
Object {
  "class-a": "scope-at-rule_module_css-class-a",
  "class-b": "scope-at-rule_module_css-class-b",
  "dark-scheme": "scope-at-rule_module_css-dark-scheme",
  "light-scheme": "scope-at-rule_module_css-light-scheme",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 5`] = `
Object {
  "a": "nesting_module_css-a",
  "b": "nesting_module_css-b nesting_module_css-a",
  "bar": "nesting_module_css-bar nesting_module_css-foo",
  "baz": "nesting_module_css-baz",
  "foo": "nesting_module_css-foo",
  "n": "nesting_module_css-n nesting_module_css-a",
  "notice": "nesting_module_css-notice",
  "notice-heading": "nesting_module_css-notice-heading",
  "success": "nesting_module_css-success",
  "success-heading": "nesting_module_css-success-heading",
  "warning": "nesting_module_css-warning",
  "warning-heading": "nesting_module_css-warning-heading",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 6`] = `
Object {
  "one": "prefer-relative_module_css-one package_one_css-imported-relative",
  "two": "prefer-relative_module_css-two node_modules_package_two_css-imported-relative",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 7`] = `
Object {
  "a": "animation-name_module_css-a",
  "animationName": "animation-name_module_css-animationName",
  "b": "animation-name_module_css-b",
  "c": "animation-name_module_css-c",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 8`] = `
Object {
  "myClass": "at-sign-in-package-name_module_css-myClass",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 9`] = `
Object {
  "color-grey": "gray",
  "copyright": "resolving-from-node_modules_module_css-copyright node_modules_@localpackage_style_css-type-heading",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 10`] = `
Object {
  "#": "local-Ident-name_module_css-#",
  "##": "local-Ident-name_module_css-##",
  "#.#.#": "local-Ident-name_module_css-#.#.#",
  "#fake-id": "local-Ident-name_module_css-#fake-id",
  "++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.": "local-Ident-name_module_css-++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.",
  "-a-b-c-": "local-Ident-name_module_css--a-b-c-",
  "-a0-34a___f": "local-Ident-name_module_css--a0-34a___f",
  ".": "local-Ident-name_module_css-.",
  "123": "local-Ident-name_module_css-123",
  "1a2b3c": "local-Ident-name_module_css-1a2b3c",
  ":)": "local-Ident-name_module_css-:)",
  ":\`(": "local-Ident-name_module_css-:\`(",
  ":hover": "local-Ident-name_module_css-:hover",
  ":hover:focus:active": "local-Ident-name_module_css-:hover:focus:active",
  "<><<<>><>": "local-Ident-name_module_css-<><<<>><>",
  "<p>": "local-Ident-name_module_css-<p>",
  "?": "local-Ident-name_module_css-?",
  "@": "local-Ident-name_module_css-@",
  "B&W?": "local-Ident-name_module_css-B&W?",
  "[attr=value]": "local-Ident-name_module_css-[attr=value]",
  "_": "local-Ident-name_module_css-_",
  "_test": "local-Ident-name_module_css-_test",
  "className": "local-Ident-name_module_css-className",
  "f!o!o": "local-Ident-name_module_css-f!o!o",
  "f'o'o": "local-Ident-name_module_css-f'o'o",
  "f*o*o": "local-Ident-name_module_css-f*o*o",
  "f+o+o": "local-Ident-name_module_css-f+o+o",
  "f/o/o": "local-Ident-name_module_css-f/o/o",
  "f\\\\o\\\\o": "local-Ident-name_module_css-f\\\\o\\\\o",
  "foo.bar": "local-Ident-name_module_css-foo.bar",
  "foo/bar": "local-Ident-name_module_css-foo/bar",
  "foo/bar/baz": "local-Ident-name_module_css-foo/bar/baz",
  "foo\\\\bar": "local-Ident-name_module_css-foo\\\\bar",
  "foo\\\\bar\\\\baz": "local-Ident-name_module_css-foo\\\\bar\\\\baz",
  "f~o~o": "local-Ident-name_module_css-f~o~o",
  "m_x_@": "local-Ident-name_module_css-m_x_@",
  "someId": "local-Ident-name_module_css-someId",
  "subClass": "local-Ident-name_module_css-subClass",
  "test": "local-Ident-name_module_css-test",
  "{}": "local-Ident-name_module_css-{}",
  "©": "local-Ident-name_module_css-©",
  "“‘’”": "local-Ident-name_module_css-“‘’”",
  "⌘⌥": "local-Ident-name_module_css-⌘⌥",
  "☺☃": "local-Ident-name_module_css-☺☃",
  "♥": "local-Ident-name_module_css-♥",
  "𝄞♪♩♫♬": "local-Ident-name_module_css-𝄞♪♩♫♬",
  "💩": "local-Ident-name_module_css-💩",
  "😍": "local-Ident-name_module_css-😍",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 11`] = `
Object {
  "#": "local-Ident-name.module--#--0fms6",
  "##": "local-Ident-name.module--##--4MjQ_",
  "#.#.#": "local-Ident-name.module--#.#.#--4Z5kr",
  "#fake-id": "local-Ident-name.module--#fake-id--stuV6",
  "++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.": "local-Ident-name.module--++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.--GNmAU",
  "-a-b-c-": "local-Ident-name.module---a-b-c---BVuZu",
  "-a0-34a___f": "local-Ident-name.module---a0-34a___f--rWQCS",
  ".": "local-Ident-name.module--.--Bix0N",
  "123": "local-Ident-name.module--123--PvTN4",
  "1a2b3c": "local-Ident-name.module--1a2b3c--xSd9R",
  ":)": "local-Ident-name.module--:)--kXjo5",
  ":\`(": "local-Ident-name.module--:\`(--YZqyU",
  ":hover": "local-Ident-name.module--:hover--QXnD_",
  ":hover:focus:active": "local-Ident-name.module--:hover:focus:active--0eQHC",
  "<><<<>><>": "local-Ident-name.module--<><<<>><>--q0Tti",
  "<p>": "local-Ident-name.module--<p>--RCYv0",
  "?": "local-Ident-name.module--?--tcA6P",
  "@": "local-Ident-name.module--@--IjjsD",
  "B&W?": "local-Ident-name.module--B&W?--9Uv5j",
  "[attr=value]": "local-Ident-name.module--[attr=value]--bHMhi",
  "_": "local-Ident-name.module--_--wWsEV",
  "_test": "local-Ident-name.module--_test--c_lQ7",
  "className": "local-Ident-name.module--className--QdX5M",
  "f!o!o": "local-Ident-name.module--f!o!o--U5evv",
  "f'o'o": "local-Ident-name.module--f'o'o--5azUC",
  "f*o*o": "local-Ident-name.module--f*o*o--1OZxX",
  "f+o+o": "local-Ident-name.module--f+o+o--r42Md",
  "f/o/o": "local-Ident-name.module--f/o/o--gpPiW",
  "f\\\\o\\\\o": "local-Ident-name.module--f\\\\o\\\\o--gu2u7",
  "foo.bar": "local-Ident-name.module--foo.bar--EDSRu",
  "foo/bar": "local-Ident-name.module--foo/bar--ARBA4",
  "foo/bar/baz": "local-Ident-name.module--foo/bar/baz--p2TDV",
  "foo\\\\bar": "local-Ident-name.module--foo\\\\bar--vSOik",
  "foo\\\\bar\\\\baz": "local-Ident-name.module--foo\\\\bar\\\\baz--FlFA-",
  "f~o~o": "local-Ident-name.module--f~o~o--6JU27",
  "m_x_@": "local-Ident-name.module--m_x_@--wXBtR",
  "someId": "local-Ident-name.module--someId--fs0tG",
  "subClass": "local-Ident-name.module--subClass--EEiow",
  "test": "local-Ident-name.module--test--n138O",
  "{}": "local-Ident-name.module--{}--yOiSk",
  "©": "local-Ident-name.module--©--ABrkO",
  "“‘’”": "local-Ident-name.module--“‘’”--Viviw",
  "⌘⌥": "local-Ident-name.module--⌘⌥--tU2QX",
  "☺☃": "local-Ident-name.module--☺☃--_YUxr",
  "♥": "local-Ident-name.module--♥--zQEWH",
  "𝄞♪♩♫♬": "local-Ident-name.module--𝄞♪♩♫♬--16ySy",
  "💩": "local-Ident-name.module--💩--fhsK2",
  "😍": "local-Ident-name.module--😍--rYTiW",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 12`] = `
Object {
  "#": "_-1#",
  "##": "_-1##",
  "#.#.#": "_-1#.#.#",
  "#fake-id": "_-1#fake-id",
  "++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.": "_-1++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.",
  "-a-b-c-": "_-1-a-b-c-",
  "-a0-34a___f": "_-1-a0-34a___f",
  ".": "_-1.",
  "123": "_-1123",
  "1a2b3c": "_-11a2b3c",
  ":)": "_-1:)",
  ":\`(": "_-1:\`(",
  ":hover": "_-1:hover",
  ":hover:focus:active": "_-1:hover:focus:active",
  "<><<<>><>": "_-1<><<<>><>",
  "<p>": "_-1<p>",
  "?": "_-1?",
  "@": "_-1@",
  "B&W?": "_-1B&W?",
  "[attr=value]": "_-1[attr=value]",
  "_": "_-1_",
  "_test": "_-1_test",
  "className": "_-1className",
  "f!o!o": "_-1f!o!o",
  "f'o'o": "_-1f'o'o",
  "f*o*o": "_-1f*o*o",
  "f+o+o": "_-1f+o+o",
  "f/o/o": "_-1f/o/o",
  "f\\\\o\\\\o": "_-1f\\\\o\\\\o",
  "foo.bar": "_-1foo.bar",
  "foo/bar": "_-1foo/bar",
  "foo/bar/baz": "_-1foo/bar/baz",
  "foo\\\\bar": "_-1foo\\\\bar",
  "foo\\\\bar\\\\baz": "_-1foo\\\\bar\\\\baz",
  "f~o~o": "_-1f~o~o",
  "m_x_@": "_-1m_x_@",
  "someId": "_-1someId",
  "subClass": "_-1subClass",
  "test": "_-1test",
  "{}": "_-1{}",
  "©": "_-1©",
  "“‘’”": "_-1“‘’”",
  "⌘⌥": "_-1⌘⌥",
  "☺☃": "_-1☺☃",
  "♥": "_-1♥",
  "𝄞♪♩♫♬": "_-1𝄞♪♩♫♬",
  "💩": "_-1💩",
  "😍": "_-1😍",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 13`] = `
Object {
  "#": "_--#",
  "##": "_--##",
  "#.#.#": "_--#.#.#",
  "#fake-id": "_--#fake-id",
  "++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.": "_--++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.",
  "-a-b-c-": "_---a-b-c-",
  "-a0-34a___f": "_---a0-34a___f",
  ".": "_--.",
  "123": "_--123",
  "1a2b3c": "_--1a2b3c",
  ":)": "_--:)",
  ":\`(": "_--:\`(",
  ":hover": "_--:hover",
  ":hover:focus:active": "_--:hover:focus:active",
  "<><<<>><>": "_--<><<<>><>",
  "<p>": "_--<p>",
  "?": "_--?",
  "@": "_--@",
  "B&W?": "_--B&W?",
  "[attr=value]": "_--[attr=value]",
  "_": "_--_",
  "_test": "_--_test",
  "className": "_--className",
  "f!o!o": "_--f!o!o",
  "f'o'o": "_--f'o'o",
  "f*o*o": "_--f*o*o",
  "f+o+o": "_--f+o+o",
  "f/o/o": "_--f/o/o",
  "f\\\\o\\\\o": "_--f\\\\o\\\\o",
  "foo.bar": "_--foo.bar",
  "foo/bar": "_--foo/bar",
  "foo/bar/baz": "_--foo/bar/baz",
  "foo\\\\bar": "_--foo\\\\bar",
  "foo\\\\bar\\\\baz": "_--foo\\\\bar\\\\baz",
  "f~o~o": "_--f~o~o",
  "m_x_@": "_--m_x_@",
  "someId": "_--someId",
  "subClass": "_--subClass",
  "test": "_--test",
  "{}": "_--{}",
  "©": "_--©",
  "“‘’”": "_--“‘’”",
  "⌘⌥": "_--⌘⌥",
  "☺☃": "_--☺☃",
  "♥": "_--♥",
  "𝄞♪♩♫♬": "_--𝄞♪♩♫♬",
  "💩": "_--💩",
  "😍": "_--😍",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 14`] = `
Object {
  "#": "__#",
  "##": "__##",
  "#.#.#": "__#.#.#",
  "#fake-id": "__#fake-id",
  "++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.": "__++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.",
  "-a-b-c-": "__-a-b-c-",
  "-a0-34a___f": "__-a0-34a___f",
  ".": "__.",
  "123": "__123",
  "1a2b3c": "__1a2b3c",
  ":)": "__:)",
  ":\`(": "__:\`(",
  ":hover": "__:hover",
  ":hover:focus:active": "__:hover:focus:active",
  "<><<<>><>": "__<><<<>><>",
  "<p>": "__<p>",
  "?": "__?",
  "@": "__@",
  "B&W?": "__B&W?",
  "[attr=value]": "__[attr=value]",
  "_": "___",
  "_test": "___test",
  "className": "__className",
  "f!o!o": "__f!o!o",
  "f'o'o": "__f'o'o",
  "f*o*o": "__f*o*o",
  "f+o+o": "__f+o+o",
  "f/o/o": "__f/o/o",
  "f\\\\o\\\\o": "__f\\\\o\\\\o",
  "foo.bar": "__foo.bar",
  "foo/bar": "__foo/bar",
  "foo/bar/baz": "__foo/bar/baz",
  "foo\\\\bar": "__foo\\\\bar",
  "foo\\\\bar\\\\baz": "__foo\\\\bar\\\\baz",
  "f~o~o": "__f~o~o",
  "m_x_@": "__m_x_@",
  "someId": "__someId",
  "subClass": "__subClass",
  "test": "__test",
  "{}": "__{}",
  "©": "__©",
  "“‘’”": "__“‘’”",
  "⌘⌥": "__⌘⌥",
  "☺☃": "__☺☃",
  "♥": "__♥",
  "𝄞♪♩♫♬": "__𝄞♪♩♫♬",
  "💩": "__💩",
  "😍": "__😍",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 15`] = `
Object {
  "#": "#--tlFV0b",
  "##": "##--7vA-7E",
  "#.#.#": "#.#.#--1Hd875",
  "#fake-id": "#fake-id--ez7Dik",
  "++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.": "++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.--OsAmD3",
  "-a-b-c-": "-a-b-c---jfQ3Qn",
  "-a0-34a___f": "-a0-34a___f--OWXZy-",
  ".": ".--ZtQPX0",
  "123": "_123--j0sSmE",
  "1a2b3c": "_1a2b3c--AMCMZb",
  ":)": ":)--u1ngqY",
  ":\`(": ":\`(--hgmvDX",
  ":hover": ":hover--8XNA4p",
  ":hover:focus:active": ":hover:focus:active--EpwJWE",
  "<><<<>><>": "<><<<>><>--8jXRVC",
  "<p>": "<p>--MHaC0-",
  "?": "?--9Y6SkK",
  "@": "@--Sc9iGx",
  "B&W?": "B&W?--D7HZ-H",
  "[attr=value]": "[attr=value]--ZTV_uO",
  "_": "_--NFJ6vs",
  "_test": "_test--Kfd_4M",
  "className": "className--b9RUK8",
  "f!o!o": "f!o!o--QQGZu2",
  "f'o'o": "f'o'o--00bSFC",
  "f*o*o": "f*o*o--kom_Jq",
  "f+o+o": "f+o+o--J4WAkM",
  "f/o/o": "f/o/o--3vNZZM",
  "f\\\\o\\\\o": "f\\\\o\\\\o--wNzTj3",
  "foo.bar": "foo.bar--pYS5El",
  "foo/bar": "foo/bar--9GWp9d",
  "foo/bar/baz": "foo/bar/baz--MRJglc",
  "foo\\\\bar": "foo\\\\bar--CCzsTj",
  "foo\\\\bar\\\\baz": "foo\\\\bar\\\\baz--nRgTR7",
  "f~o~o": "f~o~o--26zzb-",
  "m_x_@": "m_x_@--kG1v1e",
  "someId": "someId--TlAET9",
  "subClass": "subClass--sglK-1",
  "test": "test--mowWgR",
  "{}": "{}--Tr49RL",
  "©": "©--sWiP9l",
  "“‘’”": "“‘’”--M3gyy-",
  "⌘⌥": "⌘⌥--oDuNAW",
  "☺☃": "☺☃--pbZo-2",
  "♥": "♥--e6nEYm",
  "𝄞♪♩♫♬": "𝄞♪♩♫♬--vrTCd6",
  "💩": "💩--1Txu-k",
  "😍": "😍--rPyRbM",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 16`] = `
Object {
  "#": "😀- -#",
  "##": "😀- -##",
  "#.#.#": "😀- -#.#.#",
  "#fake-id": "😀- -#fake-id",
  "++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.": "😀- -++++++++++[>+++++++>++++++++++>+++>+<<<<-]>++.>+.+++++++..+++.>++.<<+++++++++++++++.>.+++.------.--------.>+.>.",
  "-a-b-c-": "😀- --a-b-c-",
  "-a0-34a___f": "😀- --a0-34a___f",
  ".": "😀- -.",
  "123": "😀- -123",
  "1a2b3c": "😀- -1a2b3c",
  ":)": "😀- -:)",
  ":\`(": "😀- -:\`(",
  ":hover": "😀- -:hover",
  ":hover:focus:active": "😀- -:hover:focus:active",
  "<><<<>><>": "😀- -<><<<>><>",
  "<p>": "😀- -<p>",
  "?": "😀- -?",
  "@": "😀- -@",
  "B&W?": "😀- -B&W?",
  "[attr=value]": "😀- -[attr=value]",
  "_": "😀- -_",
  "_test": "😀- -_test",
  "className": "😀- -className",
  "f!o!o": "😀- -f!o!o",
  "f'o'o": "😀- -f'o'o",
  "f*o*o": "😀- -f*o*o",
  "f+o+o": "😀- -f+o+o",
  "f/o/o": "😀- -f/o/o",
  "f\\\\o\\\\o": "😀- -f\\\\o\\\\o",
  "foo.bar": "😀- -foo.bar",
  "foo/bar": "😀- -foo/bar",
  "foo/bar/baz": "😀- -foo/bar/baz",
  "foo\\\\bar": "😀- -foo\\\\bar",
  "foo\\\\bar\\\\baz": "😀- -foo\\\\bar\\\\baz",
  "f~o~o": "😀- -f~o~o",
  "m_x_@": "😀- -m_x_@",
  "someId": "😀- -someId",
  "subClass": "😀- -subClass",
  "test": "😀- -test",
  "{}": "😀- -{}",
  "©": "😀- -©",
  "“‘’”": "😀- -“‘’”",
  "⌘⌥": "😀- -⌘⌥",
  "☺☃": "😀- -☺☃",
  "♥": "😀- -♥",
  "𝄞♪♩♫♬": "😀- -𝄞♪♩♫♬",
  "💩": "😀- -💩",
  "😍": "😀- -😍",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 17`] = `
Object {
  "simple": "order_module_css-simple order-1_css-order-1 order-2_css-order-2 order-1_css-order-1-1 order-2_css-order-2-2",
  "simple-other": "order_module_css-simple-other order-1_css-order-1",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 18`] = `
Object {
  "backButton": "dedup_module_css-backButton secondary-button_css-secondaryButton",
  "nextButton": "dedup_module_css-nextButton primary-button_css-primaryButton",
}
`;

exports[`ConfigTestCases css css-loader exported tests should work 19`] = `
Array [
  "/*!********************************!*\\\\
  !*** css ./classes.module.css ***!
  \\\\********************************/
/* Tests from css-loader */

/* should work with the \`default\` class and with named export */
.classes_module_css-default {
	background: red
}


/* should work with the \`module\` class and with named export */
.classes_module_css-module {
	background: red
}

/*!***********************!*\\\\
  !*** css ./alias.css ***!
  \\\\***********************/
.alias_css-imported-alias {
  display: table;
}

/*!*************************!*\\\\
  !*** css ./alias-1.css ***!
  \\\\*************************/
.alias-1_css-imported-alias-2 {
  background: red;
}

.alias-1_css-imported-alias-3 {
  background: red;
}

/*!******************************************!*\\\\
  !*** css ./composes-multiple.module.css ***!
  \\\\******************************************/
.composes-multiple_module_css-other-class {
	color: red;
}

.composes-multiple_module_css-class-1 {
	color: blue;
}

.composes-multiple_module_css-class-2 {
	color: blue;
}

.global-class {
	padding: 10px;
}

.global-class-1 {
	padding: 10px;
}

.global-class-2 {
	padding: 10px;
}

.composes-multiple_module_css-class {
	color: gainsboro;
}

.composes-multiple_module_css-class-other {
	}


/*!****************************************!*\\\\
  !*** css ./composes-global.module.css ***!
  \\\\****************************************/
.global-class {
	color: red;
}

.other-global-class {
	color: red;
}

.composes-global_module_css-otherClassName {
	color: blue;
}

/*!**************************************!*\\\\
  !*** css ./scope-at-rule.module.css ***!
  \\\\**************************************/
@scope (.scope-at-rule_module_css-light-scheme) {
	:scope {
		background-color: plum;
	}

	.scope-at-rule_module_css-class-a {
		color: darkmagenta;
	}
}

@scope (.scope-at-rule_module_css-dark-scheme) {
	:scope {
		background-color: darkmagenta;
		color: antiquewhite;
	}

	.scope-at-rule_module_css-class-b {
		color: plum;
	}
}

@scope {
	:scope {
		color: red;
	}
}

/*!********************************!*\\\\
  !*** css ./nesting.module.css ***!
  \\\\********************************/
.nesting_module_css-notice {
	width: 90%;
	justify-content: center;
	border-radius: 1rem;
	border: black solid 2px;
	background-color: #ffc107;
	color: black;
	padding: 1rem;

	.nesting_module_css-notice-heading:before {
		/* equivalent to \`.notice .notice-heading:before\` */
		content: \\"ℹ︎ \\";
	}

	&.nesting_module_css-warning {
		/* equivalent to \`.notice.warning\` */
		background-color: #d81b60;
		border-color: #d81b60;
		color: white;
		.nesting_module_css-warning-heading:before {
			/* equivalent to \`.notice.warning .warning-heading:before\` */
			content: \\"! \\";
		}
	}

	&.nesting_module_css-success {
		/* equivalent to \`.notice.success\` */
		background-color: #004d40;
		border-color: #004d40;
		color: white;

		.nesting_module_css-success-heading:before {
			/* equivalent to \`.notice.success .success-heading:before\` */
			content: \\"✓ \\";
		}
	}
}

.nesting_module_css-foo {
	color: red;
}

.nesting_module_css-bar {
	&.nesting_module_css-baz {
		color: blue;
	}
}

.nesting_module_css-foo {
	display: grid;

	@media (orientation: landscape) {
		& {
			grid-auto-flow: column;
		}
	}
}

@media (orientation: landscape) {
	.nesting_module_css-a {
		color: red;
	}
}

@media (orientation: landscape) {
	@media (orientation: landscape) {
		.nesting_module_css-b {
			color: red;
			}
	}
}

.nesting_module_css-n {
	@media (orientation: landscape) {
		color: red;
	}
}

/*!*****************************!*\\\\
  !*** css ./package/one.css ***!
  \\\\*****************************/
.package_one_css-imported-relative {
    display: block;
}

/*!******************************************!*\\\\
  !*** css ./node_modules/package/two.css ***!
  \\\\******************************************/
.node_modules_package_two_css-imported-relative {
    display: inline;
}

/*!****************************************!*\\\\
  !*** css ./prefer-relative.module.css ***!
  \\\\****************************************/
.prefer-relative_module_css-one {
	color: yellow;
	}

.prefer-relative_module_css-two {
	color: yellow;
	}

/*!***************************************!*\\\\
  !*** css ./animation-name.module.css ***!
  \\\\***************************************/
.animation-name_module_css-a {
	animation: 3s animation-name_module_css-animationName;
}

.animation-name_module_css-b {
	animation: animation-name_module_css-animationName 3s;
}

.animation-name_module_css-c {
	animation-name: animation-name_module_css-animationName;
}

@keyframes animation-name_module_css-animationName {
	0% {
		background: white;
	}
	100% {
		background: red;
	}
}

/*!********************************************************!*\\\\
  !*** css ./node_modules/@foo/package/style.module.css ***!
  \\\\********************************************************/
.node_modules_\\\\@foo_package_style_module_css-class {
	color: red;
}

/*!*******************************************************!*\\\\
  !*** css ./node_modules/foo/package/style.module.css ***!
  \\\\*******************************************************/
.node_modules_foo_package_style_module_css-class {
	color: red;
}

/*!************************************************!*\\\\
  !*** css ./at-sign-in-package-name.module.css ***!
  \\\\************************************************/

.at-sign-in-package-name_module_css-myClass {
	color: red;
}

/*!**************************************************!*\\\\
  !*** css ./node_modules/@localpackage/color.css ***!
  \\\\**************************************************/


/*!*******************************************************!*\\\\
  !*** css ./node_modules/@otherlocalpackage/style.css ***!
  \\\\*******************************************************/
.node_modules_\\\\@otherlocalpackage_style_css-type-heading2 {
  display: flex;
}

/*!**************************************************!*\\\\
  !*** css ./node_modules/@localpackage/style.css ***!
  \\\\**************************************************/
.node_modules_\\\\@localpackage_style_css-type-heading {
  color: red;
  margin: 0;
  padding: 0;
}

/*!****************************************************!*\\\\
  !*** css ./resolving-from-node_modules.module.css ***!
  \\\\****************************************************/


.resolving-from-node_modules_module_css-copyright {
  color: gray;
  margin: 0;
  padding: 0;
}

/*!*****************************************!*\\\\
  !*** css ./local-Ident-name.module.css ***!
  \\\\*****************************************/
.local-Ident-name_module_css-test {
  background: red;
}

.local-Ident-name_module_css-_test {
  background: blue;
}

.local-Ident-name_module_css-className {
  background: red;
}

#local-Ident-name_module_css-someId {
  background: green;
}

.local-Ident-name_module_css-className .local-Ident-name_module_css-subClass {
  color: green;
}

#local-Ident-name_module_css-someId .local-Ident-name_module_css-subClass {
  color: blue;
}

.local-Ident-name_module_css--a0-34a___f {
  color: red;
}

.local-Ident-name_module_css-m_x_\\\\@ {
  margin-left: auto !important;
  margin-right: auto !important;
}

.local-Ident-name_module_css-B\\\\&W\\\\? {
  margin-left: auto !important;
  margin-right: auto !important;
}

/* matches elements with class=\\":\`(\\" */
.local-Ident-name_module_css-\\\\:\\\\\`\\\\( {
  color: aqua;
}

/* matches elements with class=\\"1a2b3c\\" */
.local-Ident-name_module_css-1a2b3c {
  color: aliceblue;
}

/* matches the element with id=\\"#fake-id\\" */
#local-Ident-name_module_css-\\\\#fake-id {
  color: antiquewhite;
}

/* matches the element with id=\\"-a-b-c-\\" */
#local-Ident-name_module_css--a-b-c- {
  color: azure;
}

/* matches the element with id=\\"©\\" */
#local-Ident-name_module_css-© {
  color: black;
}

.local-Ident-name_module_css-♥ { background: lime; }
.local-Ident-name_module_css-© { background: lime; }
.local-Ident-name_module_css-😍 { background: lime; }
.local-Ident-name_module_css-“‘’” { background: lime; }
.local-Ident-name_module_css-☺☃ { background: lime; }
.local-Ident-name_module_css-⌘⌥ { background: lime; }
.local-Ident-name_module_css-𝄞♪♩♫♬ { background: lime; }
.local-Ident-name_module_css-💩 { background: lime; }
.local-Ident-name_module_css-\\\\? { background: lime; }
.local-Ident-name_module_css-\\\\@ { background: lime; }
.local-Ident-name_module_css-\\\\. { background: lime; }
.local-Ident-name_module_css-\\\\:\\\\) { background: lime; }
.local-Ident-name_module_css-\\\\:\\\\\`\\\\( { background: lime; }
.local-Ident-name_module_css-123 { background: lime; }
.local-Ident-name_module_css-1a2b3c { background: lime; }
.local-Ident-name_module_css-\\\\<p\\\\> { background: lime; }
.local-Ident-name_module_css-\\\\<\\\\>\\\\<\\\\<\\\\<\\\\>\\\\>\\\\<\\\\> { background: lime; }
.local-Ident-name_module_css-\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\[\\\\>\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\>\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\>\\\\+\\\\+\\\\+\\\\>\\\\+\\\\<\\\\<\\\\<\\\\<-\\\\]\\\\>\\\\+\\\\+\\\\.\\\\>\\\\+\\\\.\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\.\\\\.\\\\+\\\\+\\\\+\\\\.\\\\>\\\\+\\\\+\\\\.\\\\<\\\\<\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\.\\\\>\\\\.\\\\+\\\\+\\\\+\\\\.------\\\\.--------\\\\.\\\\>\\\\+\\\\.\\\\>\\\\. { background: lime; }
.local-Ident-name_module_css-\\\\# { background: lime; }
.local-Ident-name_module_css-\\\\#\\\\# { background: lime; }
.local-Ident-name_module_css-\\\\#\\\\.\\\\#\\\\.\\\\# { background: lime; }
.local-Ident-name_module_css-_ { background: lime; }
.local-Ident-name_module_css-\\\\{\\\\} { background: lime; }
.local-Ident-name_module_css-\\\\#fake-id { background: lime; }
.local-Ident-name_module_css-foo\\\\.bar { background: lime; }
.local-Ident-name_module_css-\\\\:hover { background: lime; }
.local-Ident-name_module_css-\\\\:hover\\\\:focus\\\\:active { background: lime; }
.local-Ident-name_module_css-\\\\[attr\\\\=value\\\\] { background: lime; }
.local-Ident-name_module_css-f\\\\/o\\\\/o { background: lime; }
.local-Ident-name_module_css-f\\\\\\\\o\\\\\\\\o { background: lime; }
.local-Ident-name_module_css-f\\\\*o\\\\*o { background: lime; }
.local-Ident-name_module_css-f\\\\!o\\\\!o { background: lime; }
.local-Ident-name_module_css-f\\\\'o\\\\'o { background: lime; }
.local-Ident-name_module_css-f\\\\~o\\\\~o { background: lime; }
.local-Ident-name_module_css-f\\\\+o\\\\+o { background: lime; }

.local-Ident-name_module_css-foo\\\\/bar {
  background: hotpink;
}

.local-Ident-name_module_css-foo\\\\\\\\bar {
  background: hotpink;
}

.local-Ident-name_module_css-foo\\\\/bar\\\\/baz {
  background: hotpink;
}

.local-Ident-name_module_css-foo\\\\\\\\bar\\\\\\\\baz {
  background: hotpink;
}

/*!************************************************************!*\\\\
  !*** css ./local-Ident-name.module.css?local-ident-name-1 ***!
  \\\\************************************************************/
.local-Ident-name\\\\.module--test--n138O {
  background: red;
}

.local-Ident-name\\\\.module--_test--c_lQ7 {
  background: blue;
}

.local-Ident-name\\\\.module--className--QdX5M {
  background: red;
}

#local-Ident-name\\\\.module--someId--fs0tG {
  background: green;
}

.local-Ident-name\\\\.module--className--QdX5M .local-Ident-name\\\\.module--subClass--EEiow {
  color: green;
}

#local-Ident-name\\\\.module--someId--fs0tG .local-Ident-name\\\\.module--subClass--EEiow {
  color: blue;
}

.local-Ident-name\\\\.module---a0-34a___f--rWQCS {
  color: red;
}

.local-Ident-name\\\\.module--m_x_\\\\@--wXBtR {
  margin-left: auto !important;
  margin-right: auto !important;
}

.local-Ident-name\\\\.module--B\\\\&W\\\\?--9Uv5j {
  margin-left: auto !important;
  margin-right: auto !important;
}

/* matches elements with class=\\":\`(\\" */
.local-Ident-name\\\\.module--\\\\:\\\\\`\\\\(--YZqyU {
  color: aqua;
}

/* matches elements with class=\\"1a2b3c\\" */
.local-Ident-name\\\\.module--1a2b3c--xSd9R {
  color: aliceblue;
}

/* matches the element with id=\\"#fake-id\\" */
#local-Ident-name\\\\.module--\\\\#fake-id--stuV6 {
  color: antiquewhite;
}

/* matches the element with id=\\"-a-b-c-\\" */
#local-Ident-name\\\\.module---a-b-c---BVuZu {
  color: azure;
}

/* matches the element with id=\\"©\\" */
#local-Ident-name\\\\.module--©--ABrkO {
  color: black;
}

.local-Ident-name\\\\.module--♥--zQEWH { background: lime; }
.local-Ident-name\\\\.module--©--ABrkO { background: lime; }
.local-Ident-name\\\\.module--😍--rYTiW { background: lime; }
.local-Ident-name\\\\.module--“‘’”--Viviw { background: lime; }
.local-Ident-name\\\\.module--☺☃--_YUxr { background: lime; }
.local-Ident-name\\\\.module--⌘⌥--tU2QX { background: lime; }
.local-Ident-name\\\\.module--𝄞♪♩♫♬--16ySy { background: lime; }
.local-Ident-name\\\\.module--💩--fhsK2 { background: lime; }
.local-Ident-name\\\\.module--\\\\?--tcA6P { background: lime; }
.local-Ident-name\\\\.module--\\\\@--IjjsD { background: lime; }
.local-Ident-name\\\\.module--\\\\.--Bix0N { background: lime; }
.local-Ident-name\\\\.module--\\\\:\\\\)--kXjo5 { background: lime; }
.local-Ident-name\\\\.module--\\\\:\\\\\`\\\\(--YZqyU { background: lime; }
.local-Ident-name\\\\.module--123--PvTN4 { background: lime; }
.local-Ident-name\\\\.module--1a2b3c--xSd9R { background: lime; }
.local-Ident-name\\\\.module--\\\\<p\\\\>--RCYv0 { background: lime; }
.local-Ident-name\\\\.module--\\\\<\\\\>\\\\<\\\\<\\\\<\\\\>\\\\>\\\\<\\\\>--q0Tti { background: lime; }
.local-Ident-name\\\\.module--\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\[\\\\>\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\>\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\>\\\\+\\\\+\\\\+\\\\>\\\\+\\\\<\\\\<\\\\<\\\\<-\\\\]\\\\>\\\\+\\\\+\\\\.\\\\>\\\\+\\\\.\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\.\\\\.\\\\+\\\\+\\\\+\\\\.\\\\>\\\\+\\\\+\\\\.\\\\<\\\\<\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\.\\\\>\\\\.\\\\+\\\\+\\\\+\\\\.------\\\\.--------\\\\.\\\\>\\\\+\\\\.\\\\>\\\\.--GNmAU { background: lime; }
.local-Ident-name\\\\.module--\\\\#--0fms6 { background: lime; }
.local-Ident-name\\\\.module--\\\\#\\\\#--4MjQ_ { background: lime; }
.local-Ident-name\\\\.module--\\\\#\\\\.\\\\#\\\\.\\\\#--4Z5kr { background: lime; }
.local-Ident-name\\\\.module--_--wWsEV { background: lime; }
.local-Ident-name\\\\.module--\\\\{\\\\}--yOiSk { background: lime; }
.local-Ident-name\\\\.module--\\\\#fake-id--stuV6 { background: lime; }
.local-Ident-name\\\\.module--foo\\\\.bar--EDSRu { background: lime; }
.local-Ident-name\\\\.module--\\\\:hover--QXnD_ { background: lime; }
.local-Ident-name\\\\.module--\\\\:hover\\\\:focus\\\\:active--0eQHC { background: lime; }
.local-Ident-name\\\\.module--\\\\[attr\\\\=value\\\\]--bHMhi { background: lime; }
.local-Ident-name\\\\.module--f\\\\/o\\\\/o--gpPiW { background: lime; }
.local-Ident-name\\\\.module--f\\\\\\\\o\\\\\\\\o--gu2u7 { background: lime; }
.local-Ident-name\\\\.module--f\\\\*o\\\\*o--1OZxX { background: lime; }
.local-Ident-name\\\\.module--f\\\\!o\\\\!o--U5evv { background: lime; }
.local-Ident-name\\\\.module--f\\\\'o\\\\'o--5azUC { background: lime; }
.local-Ident-name\\\\.module--f\\\\~o\\\\~o--6JU27 { background: lime; }
.local-Ident-name\\\\.module--f\\\\+o\\\\+o--r42Md { background: lime; }

.local-Ident-name\\\\.module--foo\\\\/bar--ARBA4 {
  background: hotpink;
}

.local-Ident-name\\\\.module--foo\\\\\\\\bar--vSOik {
  background: hotpink;
}

.local-Ident-name\\\\.module--foo\\\\/bar\\\\/baz--p2TDV {
  background: hotpink;
}

.local-Ident-name\\\\.module--foo\\\\\\\\bar\\\\\\\\baz--FlFA- {
  background: hotpink;
}

/*!************************************************************!*\\\\
  !*** css ./local-Ident-name.module.css?local-ident-name-2 ***!
  \\\\************************************************************/
._-1test {
  background: red;
}

._-1_test {
  background: blue;
}

._-1className {
  background: red;
}

#_-1someId {
  background: green;
}

._-1className ._-1subClass {
  color: green;
}

#_-1someId ._-1subClass {
  color: blue;
}

._-1-a0-34a___f {
  color: red;
}

._-1m_x_\\\\@ {
  margin-left: auto !important;
  margin-right: auto !important;
}

._-1B\\\\&W\\\\? {
  margin-left: auto !important;
  margin-right: auto !important;
}

/* matches elements with class=\\":\`(\\" */
._-1\\\\:\\\\\`\\\\( {
  color: aqua;
}

/* matches elements with class=\\"1a2b3c\\" */
._-11a2b3c {
  color: aliceblue;
}

/* matches the element with id=\\"#fake-id\\" */
#_-1\\\\#fake-id {
  color: antiquewhite;
}

/* matches the element with id=\\"-a-b-c-\\" */
#_-1-a-b-c- {
  color: azure;
}

/* matches the element with id=\\"©\\" */
#_-1© {
  color: black;
}

._-1♥ { background: lime; }
._-1© { background: lime; }
._-1😍 { background: lime; }
._-1“‘’” { background: lime; }
._-1☺☃ { background: lime; }
._-1⌘⌥ { background: lime; }
._-1𝄞♪♩♫♬ { background: lime; }
._-1💩 { background: lime; }
._-1\\\\? { background: lime; }
._-1\\\\@ { background: lime; }
._-1\\\\. { background: lime; }
._-1\\\\:\\\\) { background: lime; }
._-1\\\\:\\\\\`\\\\( { background: lime; }
._-1123 { background: lime; }
._-11a2b3c { background: lime; }
._-1\\\\<p\\\\> { background: lime; }
._-1\\\\<\\\\>\\\\<\\\\<\\\\<\\\\>\\\\>\\\\<\\\\> { background: lime; }
._-1\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\[\\\\>\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\>\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\>\\\\+\\\\+\\\\+\\\\>\\\\+\\\\<\\\\<\\\\<\\\\<-\\\\]\\\\>\\\\+\\\\+\\\\.\\\\>\\\\+\\\\.\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\.\\\\.\\\\+\\\\+\\\\+\\\\.\\\\>\\\\+\\\\+\\\\.\\\\<\\\\<\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\.\\\\>\\\\.\\\\+\\\\+\\\\+\\\\.------\\\\.--------\\\\.\\\\>\\\\+\\\\.\\\\>\\\\. { background: lime; }
._-1\\\\# { background: lime; }
._-1\\\\#\\\\# { background: lime; }
._-1\\\\#\\\\.\\\\#\\\\.\\\\# { background: lime; }
._-1_ { background: lime; }
._-1\\\\{\\\\} { background: lime; }
._-1\\\\#fake-id { background: lime; }
._-1foo\\\\.bar { background: lime; }
._-1\\\\:hover { background: lime; }
._-1\\\\:hover\\\\:focus\\\\:active { background: lime; }
._-1\\\\[attr\\\\=value\\\\] { background: lime; }
._-1f\\\\/o\\\\/o { background: lime; }
._-1f\\\\\\\\o\\\\\\\\o { background: lime; }
._-1f\\\\*o\\\\*o { background: lime; }
._-1f\\\\!o\\\\!o { background: lime; }
._-1f\\\\'o\\\\'o { background: lime; }
._-1f\\\\~o\\\\~o { background: lime; }
._-1f\\\\+o\\\\+o { background: lime; }

._-1foo\\\\/bar {
  background: hotpink;
}

._-1foo\\\\\\\\bar {
  background: hotpink;
}

._-1foo\\\\/bar\\\\/baz {
  background: hotpink;
}

._-1foo\\\\\\\\bar\\\\\\\\baz {
  background: hotpink;
}

/*!************************************************************!*\\\\
  !*** css ./local-Ident-name.module.css?local-ident-name-3 ***!
  \\\\************************************************************/
._--test {
  background: red;
}

._--_test {
  background: blue;
}

._--className {
  background: red;
}

#_--someId {
  background: green;
}

._--className ._--subClass {
  color: green;
}

#_--someId ._--subClass {
  color: blue;
}

._---a0-34a___f {
  color: red;
}

._--m_x_\\\\@ {
  margin-left: auto !important;
  margin-right: auto !important;
}

._--B\\\\&W\\\\? {
  margin-left: auto !important;
  margin-right: auto !important;
}

/* matches elements with class=\\":\`(\\" */
._--\\\\:\\\\\`\\\\( {
  color: aqua;
}

/* matches elements with class=\\"1a2b3c\\" */
._--1a2b3c {
  color: aliceblue;
}

/* matches the element with id=\\"#fake-id\\" */
#_--\\\\#fake-id {
  color: antiquewhite;
}

/* matches the element with id=\\"-a-b-c-\\" */
#_---a-b-c- {
  color: azure;
}

/* matches the element with id=\\"©\\" */
#_--© {
  color: black;
}

._--♥ { background: lime; }
._--© { background: lime; }
._--😍 { background: lime; }
._--“‘’” { background: lime; }
._--☺☃ { background: lime; }
._--⌘⌥ { background: lime; }
._--𝄞♪♩♫♬ { background: lime; }
._--💩 { background: lime; }
._--\\\\? { background: lime; }
._--\\\\@ { background: lime; }
._--\\\\. { background: lime; }
._--\\\\:\\\\) { background: lime; }
._--\\\\:\\\\\`\\\\( { background: lime; }
._--123 { background: lime; }
._--1a2b3c { background: lime; }
._--\\\\<p\\\\> { background: lime; }
._--\\\\<\\\\>\\\\<\\\\<\\\\<\\\\>\\\\>\\\\<\\\\> { background: lime; }
._--\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\[\\\\>\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\>\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\>\\\\+\\\\+\\\\+\\\\>\\\\+\\\\<\\\\<\\\\<\\\\<-\\\\]\\\\>\\\\+\\\\+\\\\.\\\\>\\\\+\\\\.\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\.\\\\.\\\\+\\\\+\\\\+\\\\.\\\\>\\\\+\\\\+\\\\.\\\\<\\\\<\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\.\\\\>\\\\.\\\\+\\\\+\\\\+\\\\.------\\\\.--------\\\\.\\\\>\\\\+\\\\.\\\\>\\\\. { background: lime; }
._--\\\\# { background: lime; }
._--\\\\#\\\\# { background: lime; }
._--\\\\#\\\\.\\\\#\\\\.\\\\# { background: lime; }
._--_ { background: lime; }
._--\\\\{\\\\} { background: lime; }
._--\\\\#fake-id { background: lime; }
._--foo\\\\.bar { background: lime; }
._--\\\\:hover { background: lime; }
._--\\\\:hover\\\\:focus\\\\:active { background: lime; }
._--\\\\[attr\\\\=value\\\\] { background: lime; }
._--f\\\\/o\\\\/o { background: lime; }
._--f\\\\\\\\o\\\\\\\\o { background: lime; }
._--f\\\\*o\\\\*o { background: lime; }
._--f\\\\!o\\\\!o { background: lime; }
._--f\\\\'o\\\\'o { background: lime; }
._--f\\\\~o\\\\~o { background: lime; }
._--f\\\\+o\\\\+o { background: lime; }

._--foo\\\\/bar {
  background: hotpink;
}

._--foo\\\\\\\\bar {
  background: hotpink;
}

._--foo\\\\/bar\\\\/baz {
  background: hotpink;
}

._--foo\\\\\\\\bar\\\\\\\\baz {
  background: hotpink;
}

/*!************************************************************!*\\\\
  !*** css ./local-Ident-name.module.css?local-ident-name-4 ***!
  \\\\************************************************************/
.__test {
  background: red;
}

.___test {
  background: blue;
}

.__className {
  background: red;
}

#__someId {
  background: green;
}

.__className .__subClass {
  color: green;
}

#__someId .__subClass {
  color: blue;
}

.__-a0-34a___f {
  color: red;
}

.__m_x_\\\\@ {
  margin-left: auto !important;
  margin-right: auto !important;
}

.__B\\\\&W\\\\? {
  margin-left: auto !important;
  margin-right: auto !important;
}

/* matches elements with class=\\":\`(\\" */
.__\\\\:\\\\\`\\\\( {
  color: aqua;
}

/* matches elements with class=\\"1a2b3c\\" */
.__1a2b3c {
  color: aliceblue;
}

/* matches the element with id=\\"#fake-id\\" */
#__\\\\#fake-id {
  color: antiquewhite;
}

/* matches the element with id=\\"-a-b-c-\\" */
#__-a-b-c- {
  color: azure;
}

/* matches the element with id=\\"©\\" */
#__© {
  color: black;
}

.__♥ { background: lime; }
.__© { background: lime; }
.__😍 { background: lime; }
.__“‘’” { background: lime; }
.__☺☃ { background: lime; }
.__⌘⌥ { background: lime; }
.__𝄞♪♩♫♬ { background: lime; }
.__💩 { background: lime; }
.__\\\\? { background: lime; }
.__\\\\@ { background: lime; }
.__\\\\. { background: lime; }
.__\\\\:\\\\) { background: lime; }
.__\\\\:\\\\\`\\\\( { background: lime; }
.__123 { background: lime; }
.__1a2b3c { background: lime; }
.__\\\\<p\\\\> { background: lime; }
.__\\\\<\\\\>\\\\<\\\\<\\\\<\\\\>\\\\>\\\\<\\\\> { background: lime; }
.__\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\[\\\\>\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\>\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\>\\\\+\\\\+\\\\+\\\\>\\\\+\\\\<\\\\<\\\\<\\\\<-\\\\]\\\\>\\\\+\\\\+\\\\.\\\\>\\\\+\\\\.\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\.\\\\.\\\\+\\\\+\\\\+\\\\.\\\\>\\\\+\\\\+\\\\.\\\\<\\\\<\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\.\\\\>\\\\.\\\\+\\\\+\\\\+\\\\.------\\\\.--------\\\\.\\\\>\\\\+\\\\.\\\\>\\\\. { background: lime; }
.__\\\\# { background: lime; }
.__\\\\#\\\\# { background: lime; }
.__\\\\#\\\\.\\\\#\\\\.\\\\# { background: lime; }
.___ { background: lime; }
.__\\\\{\\\\} { background: lime; }
.__\\\\#fake-id { background: lime; }
.__foo\\\\.bar { background: lime; }
.__\\\\:hover { background: lime; }
.__\\\\:hover\\\\:focus\\\\:active { background: lime; }
.__\\\\[attr\\\\=value\\\\] { background: lime; }
.__f\\\\/o\\\\/o { background: lime; }
.__f\\\\\\\\o\\\\\\\\o { background: lime; }
.__f\\\\*o\\\\*o { background: lime; }
.__f\\\\!o\\\\!o { background: lime; }
.__f\\\\'o\\\\'o { background: lime; }
.__f\\\\~o\\\\~o { background: lime; }
.__f\\\\+o\\\\+o { background: lime; }

.__foo\\\\/bar {
  background: hotpink;
}

.__foo\\\\\\\\bar {
  background: hotpink;
}

.__foo\\\\/bar\\\\/baz {
  background: hotpink;
}

.__foo\\\\\\\\bar\\\\\\\\baz {
  background: hotpink;
}

/*!************************************************************!*\\\\
  !*** css ./local-Ident-name.module.css?local-ident-name-5 ***!
  \\\\************************************************************/
.test--mowWgR {
  background: red;
}

._test--Kfd_4M {
  background: blue;
}

.className--b9RUK8 {
  background: red;
}

#someId--TlAET9 {
  background: green;
}

.className--b9RUK8 .subClass--sglK-1 {
  color: green;
}

#someId--TlAET9 .subClass--sglK-1 {
  color: blue;
}

.-a0-34a___f--OWXZy- {
  color: red;
}

.m_x_\\\\@--kG1v1e {
  margin-left: auto !important;
  margin-right: auto !important;
}

.B\\\\&W\\\\?--D7HZ-H {
  margin-left: auto !important;
  margin-right: auto !important;
}

/* matches elements with class=\\":\`(\\" */
.\\\\:\\\\\`\\\\(--hgmvDX {
  color: aqua;
}

/* matches elements with class=\\"1a2b3c\\" */
._1a2b3c--AMCMZb {
  color: aliceblue;
}

/* matches the element with id=\\"#fake-id\\" */
#\\\\#fake-id--ez7Dik {
  color: antiquewhite;
}

/* matches the element with id=\\"-a-b-c-\\" */
#-a-b-c---jfQ3Qn {
  color: azure;
}

/* matches the element with id=\\"©\\" */
#©--sWiP9l {
  color: black;
}

.♥--e6nEYm { background: lime; }
.©--sWiP9l { background: lime; }
.😍--rPyRbM { background: lime; }
.“‘’”--M3gyy- { background: lime; }
.☺☃--pbZo-2 { background: lime; }
.⌘⌥--oDuNAW { background: lime; }
.𝄞♪♩♫♬--vrTCd6 { background: lime; }
.💩--1Txu-k { background: lime; }
.\\\\?--9Y6SkK { background: lime; }
.\\\\@--Sc9iGx { background: lime; }
.\\\\.--ZtQPX0 { background: lime; }
.\\\\:\\\\)--u1ngqY { background: lime; }
.\\\\:\\\\\`\\\\(--hgmvDX { background: lime; }
._123--j0sSmE { background: lime; }
._1a2b3c--AMCMZb { background: lime; }
.\\\\<p\\\\>--MHaC0- { background: lime; }
.\\\\<\\\\>\\\\<\\\\<\\\\<\\\\>\\\\>\\\\<\\\\>--8jXRVC { background: lime; }
.\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\[\\\\>\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\>\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\>\\\\+\\\\+\\\\+\\\\>\\\\+\\\\<\\\\<\\\\<\\\\<-\\\\]\\\\>\\\\+\\\\+\\\\.\\\\>\\\\+\\\\.\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\.\\\\.\\\\+\\\\+\\\\+\\\\.\\\\>\\\\+\\\\+\\\\.\\\\<\\\\<\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\.\\\\>\\\\.\\\\+\\\\+\\\\+\\\\.------\\\\.--------\\\\.\\\\>\\\\+\\\\.\\\\>\\\\.--OsAmD3 { background: lime; }
.\\\\#--tlFV0b { background: lime; }
.\\\\#\\\\#--7vA-7E { background: lime; }
.\\\\#\\\\.\\\\#\\\\.\\\\#--1Hd875 { background: lime; }
._--NFJ6vs { background: lime; }
.\\\\{\\\\}--Tr49RL { background: lime; }
.\\\\#fake-id--ez7Dik { background: lime; }
.foo\\\\.bar--pYS5El { background: lime; }
.\\\\:hover--8XNA4p { background: lime; }
.\\\\:hover\\\\:focus\\\\:active--EpwJWE { background: lime; }
.\\\\[attr\\\\=value\\\\]--ZTV_uO { background: lime; }
.f\\\\/o\\\\/o--3vNZZM { background: lime; }
.f\\\\\\\\o\\\\\\\\o--wNzTj3 { background: lime; }
.f\\\\*o\\\\*o--kom_Jq { background: lime; }
.f\\\\!o\\\\!o--QQGZu2 { background: lime; }
.f\\\\'o\\\\'o--00bSFC { background: lime; }
.f\\\\~o\\\\~o--26zzb- { background: lime; }
.f\\\\+o\\\\+o--J4WAkM { background: lime; }

.foo\\\\/bar--9GWp9d {
  background: hotpink;
}

.foo\\\\\\\\bar--CCzsTj {
  background: hotpink;
}

.foo\\\\/bar\\\\/baz--MRJglc {
  background: hotpink;
}

.foo\\\\\\\\bar\\\\\\\\baz--nRgTR7 {
  background: hotpink;
}

/*!************************************************************!*\\\\
  !*** css ./local-Ident-name.module.css?local-ident-name-6 ***!
  \\\\************************************************************/
.😀-\\\\ -test {
  background: red;
}

.😀-\\\\ -_test {
  background: blue;
}

.😀-\\\\ -className {
  background: red;
}

#😀-\\\\ -someId {
  background: green;
}

.😀-\\\\ -className .😀-\\\\ -subClass {
  color: green;
}

#😀-\\\\ -someId .😀-\\\\ -subClass {
  color: blue;
}

.😀-\\\\ --a0-34a___f {
  color: red;
}

.😀-\\\\ -m_x_\\\\@ {
  margin-left: auto !important;
  margin-right: auto !important;
}

.😀-\\\\ -B\\\\&W\\\\? {
  margin-left: auto !important;
  margin-right: auto !important;
}

/* matches elements with class=\\":\`(\\" */
.😀-\\\\ -\\\\:\\\\\`\\\\( {
  color: aqua;
}

/* matches elements with class=\\"1a2b3c\\" */
.😀-\\\\ -1a2b3c {
  color: aliceblue;
}

/* matches the element with id=\\"#fake-id\\" */
#😀-\\\\ -\\\\#fake-id {
  color: antiquewhite;
}

/* matches the element with id=\\"-a-b-c-\\" */
#😀-\\\\ --a-b-c- {
  color: azure;
}

/* matches the element with id=\\"©\\" */
#😀-\\\\ -© {
  color: black;
}

.😀-\\\\ -♥ { background: lime; }
.😀-\\\\ -© { background: lime; }
.😀-\\\\ -😍 { background: lime; }
.😀-\\\\ -“‘’” { background: lime; }
.😀-\\\\ -☺☃ { background: lime; }
.😀-\\\\ -⌘⌥ { background: lime; }
.😀-\\\\ -𝄞♪♩♫♬ { background: lime; }
.😀-\\\\ -💩 { background: lime; }
.😀-\\\\ -\\\\? { background: lime; }
.😀-\\\\ -\\\\@ { background: lime; }
.😀-\\\\ -\\\\. { background: lime; }
.😀-\\\\ -\\\\:\\\\) { background: lime; }
.😀-\\\\ -\\\\:\\\\\`\\\\( { background: lime; }
.😀-\\\\ -123 { background: lime; }
.😀-\\\\ -1a2b3c { background: lime; }
.😀-\\\\ -\\\\<p\\\\> { background: lime; }
.😀-\\\\ -\\\\<\\\\>\\\\<\\\\<\\\\<\\\\>\\\\>\\\\<\\\\> { background: lime; }
.😀-\\\\ -\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\[\\\\>\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\>\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\>\\\\+\\\\+\\\\+\\\\>\\\\+\\\\<\\\\<\\\\<\\\\<-\\\\]\\\\>\\\\+\\\\+\\\\.\\\\>\\\\+\\\\.\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\.\\\\.\\\\+\\\\+\\\\+\\\\.\\\\>\\\\+\\\\+\\\\.\\\\<\\\\<\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\+\\\\.\\\\>\\\\.\\\\+\\\\+\\\\+\\\\.------\\\\.--------\\\\.\\\\>\\\\+\\\\.\\\\>\\\\. { background: lime; }
.😀-\\\\ -\\\\# { background: lime; }
.😀-\\\\ -\\\\#\\\\# { background: lime; }
.😀-\\\\ -\\\\#\\\\.\\\\#\\\\.\\\\# { background: lime; }
.😀-\\\\ -_ { background: lime; }
.😀-\\\\ -\\\\{\\\\} { background: lime; }
.😀-\\\\ -\\\\#fake-id { background: lime; }
.😀-\\\\ -foo\\\\.bar { background: lime; }
.😀-\\\\ -\\\\:hover { background: lime; }
.😀-\\\\ -\\\\:hover\\\\:focus\\\\:active { background: lime; }
.😀-\\\\ -\\\\[attr\\\\=value\\\\] { background: lime; }
.😀-\\\\ -f\\\\/o\\\\/o { background: lime; }
.😀-\\\\ -f\\\\\\\\o\\\\\\\\o { background: lime; }
.😀-\\\\ -f\\\\*o\\\\*o { background: lime; }
.😀-\\\\ -f\\\\!o\\\\!o { background: lime; }
.😀-\\\\ -f\\\\'o\\\\'o { background: lime; }
.😀-\\\\ -f\\\\~o\\\\~o { background: lime; }
.😀-\\\\ -f\\\\+o\\\\+o { background: lime; }

.😀-\\\\ -foo\\\\/bar {
  background: hotpink;
}

.😀-\\\\ -foo\\\\\\\\bar {
  background: hotpink;
}

.😀-\\\\ -foo\\\\/bar\\\\/baz {
  background: hotpink;
}

.😀-\\\\ -foo\\\\\\\\bar\\\\\\\\baz {
  background: hotpink;
}

/*!*************************!*\\\\
  !*** css ./order-1.css ***!
  \\\\*************************/
.order-1_css-order-1 {
  color: red;
}

.order-1_css-order-1-1 {
  color: aliceblue;
}

/*!*************************!*\\\\
  !*** css ./order-2.css ***!
  \\\\*************************/
.order-2_css-order-2 {
  color: blue;
}

.order-2_css-order-2-2 {
  color: azure;
}

/*!******************************!*\\\\
  !*** css ./order.module.css ***!
  \\\\******************************/
.order_module_css-simple {
	display: block;
	}

.order_module_css-simple-other {
	display: inline;
	}


/*!************************!*\\\\
  !*** css ./button.css ***!
  \\\\************************/
.button_css-button {
  border: none;
  padding: 7px 15px;
  cursor: pointer;
}

/*!********************************!*\\\\
  !*** css ./primary-button.css ***!
  \\\\********************************/
.primary-button_css-primaryButton {
  background-color: blue;
  color: white;
}

/*!**********************************!*\\\\
  !*** css ./secondary-button.css ***!
  \\\\**********************************/
.secondary-button_css-secondaryButton
{
  background-color: #555;
  color: white;
}

/*!******************************!*\\\\
  !*** css ./dedup.module.css ***!
  \\\\******************************/
.dedup_module_css-nextButton {
	}

.dedup_module_css-backButton {
	}


",
]
`;
